# rs-nexus-ble-tooling

./: .gitignore  README.md  SDK_MOVELLADOT_SAMPLE.md  gateway_discover_connect.py  gateway_stream_monitor_updated.py  pyproject.toml
BasicExamples/: button.py
Capture/: __init__.py  adapters.py  cli.py  session.py  workflow.py
MetaWear/: __init__.py  client.py  profile.py  stream_client.py
MovellaDot/: README.md  __init__.py  client.py  profile.py  stream_client.py
Movesense/: __init__.py  client.py  monitor.py  profile.py  stream_client.py
NexusBLESdk/: __init__.py  client.py  file_output.py  models.py  monitoring.py  transport.py
NexusN3Dot/: client.py  profile.py  stream_client.py  subscribe_only_test.py
NexusN3HDRDot/: README.md  __init__.py  client.py  profile.py  stream_client.py
RFSurvey/: client.py  mark_client.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: metawear.rst  movelladot.rst  movesense.rst  nexusblesdk.rst  nexusn3dot.rst  nexusn3hdrdot.rst
docs/source/documentation/: api-reference.rst  cli-clients.rst  features-overview.rst  gateway-overview.rst  index.rst  sdk-usage.rst  tooling-introduction.rst
docs/source/tutorial/: index.rst  movella-dot-sample.rst
nexus_n3_tooling/: __init__.py  cli.py
tutorials/: getting_started.md
